--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,5 +5,15 @@
 }
 
 body {
-  background-color: #f0f0f0;
+  background-color: #efeded;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex-grow: 1;
 }
